# FastAGI

./: FastAGI.cabal  LICENSE  README.md
Network/: AGI.hs
Network/AGI/: Functions.hs  Parser.hs  ServerTypes.hs  Types.hs
